--- a/back.html
+++ b/back.html
@@ -1,62 +1,95 @@
 <html>
 <body class="bg-[#ffe4c4]">
-<div class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl shadow-lg bg-white/[.6]">
-    <div class="px-6 pt-4">
-        <div class="py-8 text-center text-3xl font-bold uppercase">{{Front}}</div>
-        <p id="definition" class="text-base text-gray-700 first-letter:capitalize">{{Definition}}</p>
-        <q id="example" class="text-base text-gray-500 border-t pt-2 mt-2 block">{{Example}}</q>
-    </div>
-    <div class="p-8">
-        <p id="pronunciation" class="pb-4 text-center lowercase text-3xl text-gray-700 before:content-['\\'] after:content-['\\']">{{Pronunciation}}</p>
-        <svg xmlns="http://www.w3.org/2000/svg" id="play" class="h-12 w-12 cursor-pointer m-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
-            <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-    </div>
+<div
+  class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl shadow-lg bg-white/[.6]">
+  <div class="px-6 pt-4">
+    <div id="front" class="py-8 text-center text-3xl font-bold uppercase"></div>
+    <p id="definition" class="text-base text-gray-700 first-letter:capitalize"></p>
+    <q id="example" class="text-base text-gray-500 border-t pt-2 mt-2 block"></q>
+  </div>
+  <div class="p-8">
+    <p id="pronunciation" class="pb-4 text-center lowercase text-3xl text-gray-700"></p>
+    <svg xmlns="http://www.w3.org/2000/svg" id="play" class="h-12 w-12 cursor-pointer m-auto" fill="none"
+         viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <path stroke-linecap="round" stroke-linejoin="round"
+            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"/>
+      <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+    </svg>
+  </div>
 </div>
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        const getAudioSrc = function (word) {
-            word = word.toLowerCase();
-            let threeChars = word.slice(0, 3);
-            while (threeChars.length < 3) {
-                threeChars += '_';
-            }
-            let fiveChars = word.slice(0, 5);
-            while (fiveChars.length < 5) {
-                fiveChars += '_';
-            }
-            return 'https://dictionary.cambridge.org/media/english/us_pron/' +
-                word.slice(0, 1) + '/' +
-                threeChars + '/' +
-                fiveChars + '/' +
-                word + '.mp3';
-        };
-        const createAudioElement = function (front) {
-            const $play = document.querySelector('#play');
-            let audio = document.createElement('audio');
-            audio.autoplay = true;
-            audio.src = getAudioSrc(front);
-            audio.type = 'audio/mpeg';
-            audio.onerror = function() {
-                $play.classList.add('hidden');
-            };
-            document.body.appendChild(audio);
-            $play.addEventListener('click', function() {
-                audio.play();
-            })
-        };
-        if ('{{Example}}' === '') {
-            document.querySelector('#example').classList.add('hidden');
-        }
-        if ('{{Pronunciation}}' === '') {
-            document.querySelector('#pronunciation').classList.add('hidden');
-        }
-        if ('{{Definition}}' === '') {
-            document.querySelector('#definition').classList.add('hidden');
-        }
-        createAudioElement('{{Front}}');
-    });
+  document.addEventListener('DOMContentLoaded', async function () {
+    const fillPronunciationElement = async function (word) {
+      const $pronunciation = document.querySelector('#pronunciation')
+      $pronunciation.innerHTML = await getPronunciation(word)
+      if ($pronunciation.innerHTML === '') {
+        document.querySelector('#pronunciation').classList.add('hidden');
+      }
+    }
+    const getPronunciation = async function (word) {
+      let response = await fetch('https://en.wiktionary.org/w/api.php?action=parse&format=json&prop=text&origin=*&page=' + word);
+
+      const json = await response.json()
+      const html = json.parse.text['*']
+      let $pronunciation = new DOMParser().parseFromString(html, 'text/html').body.querySelector('.ipa')
+
+      if (!$pronunciation) {
+        return null
+      }
+
+      return $pronunciation.innerHTML
+    }
+    const getAudioSrc = function (word) {
+      word = word.toLowerCase();
+      let threeChars = word.slice(0, 3);
+      while (threeChars.length < 3) {
+        threeChars += '_';
+      }
+      let fiveChars = word.slice(0, 5);
+      while (fiveChars.length < 5) {
+        fiveChars += '_';
+      }
+      return 'https://dictionary.cambridge.org/media/english/us_pron/' +
+        word.slice(0, 1) + '/' +
+        threeChars + '/' +
+        fiveChars + '/' +
+        word + '.mp3';
+    };
+    const createAudioElement = function (front) {
+      const $play = document.querySelector('#play');
+      let audio = document.createElement('audio');
+      audio.autoplay = true;
+      audio.src = getAudioSrc(front);
+      audio.type = 'audio/mpeg';
+      audio.onerror = function () {
+        $play.classList.add('hidden');
+      };
+      document.body.appendChild(audio);
+      $play.addEventListener('click', function () {
+        audio.play();
+      })
+    };
+    const example = '{{Example}}'
+    const $example = document.querySelector('#example')
+    const definition = '{{Definition}}'
+    const $definition = document.querySelector('#definition')
+    const front = '{{Front}}'
+    const $front = document.querySelector('#front')
+
+    $front.innerHTML = front
+    if (definition !== '') {
+      $definition.innerHTML = definition
+    } else {
+      $definition.classList.add('hidden')
+    }
+    if (example !== '') {
+      $example.innerHTML = example
+    } else {
+      $example.classList.add('hidden')
+    }
+    createAudioElement(front);
+    await fillPronunciationElement(front);
+  });
 </script>
 </body>
 </html>
