--- a/front.html
+++ b/front.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
 <body class="bg-[#ffe4c4]">
 <div
   class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl bg-white/[.6] shadow-lg">
