--- a/front.html
+++ b/front.html
@@ -7,9 +7,15 @@
 <body class="bg-[#ffe4c4]">
 <div
   class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl bg-white/[.6] shadow-lg">
-  <div class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase">
-    {{Front}}
-  </div>
+  <div id="front"
+       class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase"></div>
 </div>
+<script>
+  document.addEventListener('DOMContentLoaded', async function () {
+    const randomChoice = Math.round(Math.random());
+    const choices = ['{{Front}} ', '{{Definition}}'];
+    document.querySelector('#front').innerText = choices[randomChoice];
+  });
+</script>
 </body>
 </html>
