--- a/basic/front.html
+++ b/basic/front.html
@@ -4,19 +4,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#ffe4c4]">
+<body>
 <div
   class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl bg-white/[.6] shadow-lg">
   <div id="front"
        class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase"></div>
 </div>
 <script>
-  document.addEventListener('DOMContentLoaded', async function () {
-    const $ = document.querySelector.bind(document);
-    const randomChoice = Math.round(Math.random());
-    const choices = ['{{Front}} ', '{{Back}}'];
-    $('#front').innerText = choices[randomChoice];
-  });
+  (function() {
+    document.addEventListener('DOMContentLoaded', async function () {
+      const $ = document.querySelector.bind(document);
+      const randomChoice = Math.round(Math.random());
+      const choices = ['{{Front}} ', '{{Back}}'];
+      $('#front').innerText = choices[randomChoice];
+
+      const colors = ['bg-[#e0ffcd]', 'bg-[#fdffcd]', 'bg-[#c24d2c]', 'bg-[#f4aeba]', 'bg-[#5585b5]', 'bg-[#ffe4c4]', 'bg-[#d59bf6]', 'bg-[#bbe4e9]'];
+      const randomColorChoice = Math.floor(Math.random() * colors.length);
+      const body = $('body') || $('.card');
+      body.classList.add(colors[randomColorChoice]);
+    });
+  })();
 </script>
 </body>
 </html>
