--- a/english/back.html
+++ b/english/back.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#ffe4c4]">
+<body>
 <div
   class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl shadow-lg bg-white/[.6]">
   <div class="px-6 pt-4">
@@ -23,8 +23,15 @@
   </div>
 </div>
 <script>
-  document.addEventListener('DOMContentLoaded', async function () {
+  (function() {
     const $ = document.querySelector.bind(document);
+
+    const color = localStorage.getItem('color');
+    if (color !== null) {
+      const body = $('body') || $('.card');
+      body.classList.add(color);
+    }
+
     const fillPronunciationElement = async function (word) {
       const $pronunciation = $('#pronunciation');
       $pronunciation.innerHTML = await getPronunciation(word);
@@ -94,8 +101,8 @@
       $example.classList.add('hidden');
     }
     createAudioElement(front);
-    await fillPronunciationElement(front);
-  });
+    fillPronunciationElement(front);
+  })();
 </script>
 </body>
 </html>
