--- a/english/front.html
+++ b/english/front.html
@@ -4,19 +4,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-[#ffe4c4]">
+<body>
 <div
   class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl bg-white/[.6] shadow-lg">
   <div id="front"
        class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase"></div>
 </div>
 <script>
-  document.addEventListener('DOMContentLoaded', async function () {
+  (function() {
     const $ = document.querySelector.bind(document);
     const randomChoice = Math.round(Math.random());
     const choices = ['{{Front}} ', '{{Definition}}'];
     $('#front').innerText = choices[randomChoice];
-  });
+
+    const colors = ['bg-[#e0ffcd]', 'bg-[#fdffcd]', 'bg-[#c24d2c]', 'bg-[#f4aeba]', 'bg-[#5585b5]', 'bg-[#ffe4c4]', 'bg-[#d59bf6]', 'bg-[#bbe4e9]'];
+    const randomColorChoice = Math.floor(Math.random() * colors.length);
+    $('html').classList.add(colors[randomColorChoice]);
+    localStorage.setItem('color', colors[randomColorChoice]);
+  })();
 </script>
 </body>
 </html>
