--- a/english/back.html
+++ b/english/back.html
@@ -25,11 +25,9 @@
 <script>
   (function() {
     const $ = document.querySelector.bind(document);
-
     const color = localStorage.getItem('color');
     if (color !== null) {
-      const body = $('body') || $('.card');
-      body.classList.add(color);
+      $('html').classList.add(color);
     }
 
     const fillPronunciationElement = async function (word) {
