--- a/basic/front.html
+++ b/basic/front.html
@@ -10,13 +10,15 @@
   <div id="front"
        class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase"></div>
 </div>
+<span id="front-var" class="hidden">{{Front}}</span>
+<span id="back-var" class="hidden">{{Back}}</span>
 <script>
-  (function() {
+  (function () {
     document.addEventListener('DOMContentLoaded', async function () {
       const $ = document.querySelector.bind(document);
       const html = $('html');
       const randomChoice = Math.round(Math.random());
-      const choices = ['{{Front}} ', '{{Back}}'];
+      const choices = [$('#front-var').innerText, $('#back-var').innerText];
       $('#front').innerText = choices[randomChoice];
 
       const colors = ['bg-[#e0ffcd]', 'bg-[#fdffcd]', 'bg-[#c24d2c]', 'bg-[#f4aeba]', 'bg-[#5585b5]', 'bg-[#ffe4c4]', 'bg-[#d59bf6]', 'bg-[#bbe4e9]'];
