--- a/basic/back.html
+++ b/basic/back.html
@@ -8,9 +8,9 @@
 <div
   class="absolute top-1/2 left-1/2 h-[90%] w-[90%] max-w-sm -translate-y-1/2 -translate-x-1/2 overflow-hidden rounded-xl bg-white/[.6] shadow-lg">
   <div
-    class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase w-full">
-    <p class="pb-8">{{Back}}</p>
-    <p class="pt-8 border-t">{{Front}}</p>
+    class="absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2 text-center text-4xl font-bold uppercase px-6 w-full">
+    <div class="pb-8">{{Back}}</div>
+    <div class="pt-8 border-t border-gray-500">{{Front}}</div>
   </div>
 </div>
 <script>
