--- a/basic/back.html
+++ b/basic/back.html
@@ -16,7 +16,7 @@
 <script>
   (function () {
     const $ = document.querySelector.bind(document);
-    const color = localStorage.getItem('color');
+    const color = sessionStorage.getItem('color');
     if (color !== null) {
       $('html').classList.add(color);
     }
