--- a/basic/front.html
+++ b/basic/front.html
@@ -24,7 +24,7 @@
       const colors = ['bg-[#e0ffcd]', 'bg-[#fdffcd]', 'bg-[#c24d2c]', 'bg-[#f4aeba]', 'bg-[#5585b5]', 'bg-[#ffe4c4]', 'bg-[#d59bf6]', 'bg-[#bbe4e9]'];
       const randomColorChoice = Math.floor(Math.random() * colors.length);
       html.classList.add(colors[randomColorChoice]);
-      localStorage.setItem('color', colors[randomColorChoice]);
+      sessionStorage.setItem('color', colors[randomColorChoice]);
 
       const fontFamilies = ['font-mono', 'font-serif', 'font-sans'];
       const randomFontFamilyChoice = Math.floor(Math.random() * fontFamilies.length);
